--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,7 +10,7 @@
 <link rel="icon" type="image/png" href="{{ "/favicon.png" | relURL }}">
 {{- end }}
 
-<link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}" media="all">
+<link rel="stylesheet" href="{{ "/styles/screen.next.css" | relURL }}" media="all">
 <!-- <link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}" media="all"> -->
 <!-- load non essential style sheets, see https://timkadlec.com/remembers/2020-02-13-when-css-blocks/  -->
 <link rel="stylesheet" href="{{ "/styles/syntax.css" | relURL }}" media="print" onload="this.media='screen'">
